# maker_with_rlm

./: .gitignore  CLAUDE_AGENT_SDK_REFERENCE.md  README.md  SPEC.md  pyproject.toml
07/fd7d7a8d9e/: metadata.json
07/fd7d7a8d9e/0/: context.md  (+4 more)
11/dd1c46d19d/: metadata.json
1c/9fbee61c18/: metadata.json
29/54f15a300b/: metadata.json
37/64b2c3720c/: metadata.json
3c/834f63489c/: metadata.json
47/a524c49dd3/: metadata.json
48/141c5dbb2f/: metadata.json
49/69fb37f853/: metadata.json
5c/18b5cb39fe/: metadata.json
64/914f0b1b77/: metadata.json
71/230de04598/: metadata.json
75/5745db95e0/: metadata.json
7d/a40a55511e/: metadata.json
86/44512847a4/: metadata.json
90/88dc81ce3c/: metadata.json
bc/091f175873/: metadata.json
bd/dc4dcf9db5/: metadata.json
d6/76c49a4a74/: metadata.json
docs/plans/: 2026-02-14-implementation-plan.md  2026-02-14-maker-design.md
f9/f5160b3028/: metadata.json
src/maker/: __init__.py
tests/: test_api.py
tests/test_core/: test_events.py  test_models.py  test_module.py  test_orchestrator.py
tests/test_executor/: test_agent_runner.py  test_context_builder.py  test_executor.py  test_result_collector.py
tests/test_planner/: test_parser.py  test_planner.py
tests/test_prompts/: test_prompts.py
tests/test_red_flag/: test_red_flagger.py
tests/test_tools/: test_registry.py
tests/test_validator/: test_deterministic.py  test_quality.py  test_validator.py
tests/test_voting/: test_canonicalizer.py  test_first_to_k_voter.py  test_majority_voter.py  test_no_voter.py
tests/test_yaml_cleaner/: test_cleaner.py
(+143 files in other folders)
